fix #48 slide headline settings

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -32,8 +32,7 @@
 
                         {% block blur_elysium_slides_input_headline_element %}
                             <sw-select-field 
-                                v-if="slide.slideSettings.headline"
-                                v-model="slide.slideSettings.headline.element"
+                                v-model="slide.slideSettings.headlineElement"
                                 class="bc__my-0"
                                 :label="$tc('BlurElysiumSlides.settings.headline.element.label')"
                                 :placeholder="placeholder(slide, 'settings.headline.element', this.$tc('BlurElysiumSlides.settings.headline.element.placeholder') )"
@@ -49,8 +48,7 @@
 
                         {% block blur_elysium_slides_input_headline_textcolor %}
                             <sw-colorpicker
-                                v-if="slide.slideSettings.headline"
-                                v-model="slide.slideSettings.headline.textcolor"
+                                v-model="slide.slideSettings.headlineTextcolor"
                                 :label="$tc('BlurElysiumSlides.settings.headline.textcolor.label')"
                                 colorOutput="auto"
                                 :alpha="true"
