remove bracket in slide-overlay title attribute

--- a/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
+++ b/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
@@ -99,7 +99,7 @@
             {% if slide.slideSettings.urlOverlay is same as( true ) and slide.translated.url %}
                 <a href="{{ slide.translated.url }}" 
                     class="cms-element-elysium-slide__url-overlay"
-                    title="{{ slide.translated.title }}}" 
+                    title="{{ slide.translated.title }}" 
                     class="btn btn-light cms-element-elysium-slide__cta-button"
                     {% if slide.slideSettings.urlTarget == "external" %}
                         target="_blank"
