--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -205,7 +205,7 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	text-indent: -100%;
+	text-indent: -999rem;
 }
 
 .cms-element-elysium-slide__video-element {
