--- a/src/Resources/views/storefront/element/blur-elysium-slide-video.html.twig
+++ b/src/Resources/views/storefront/element/blur-elysium-slide-video.html.twig
@@ -1,4 +1,6 @@
-<video class="cms-element-elysium-slide__video-element" autoplay loop muted
-    {% if mediaPortrait %} data-video-portrait="{{mediaPortrait.url}}"{% endif %}>
-    <source src="{{media.url}}" type="video/{{media.fileExtension}}">
-</video>
+{% block cms_element_blur_elysium_slide_video_element %}
+    <video class="cms-element-elysium-slide__video-element" autoplay loop muted
+        {% if mediaPortrait %} data-video-portrait="{{mediaPortrait.url}}"{% endif %}>
+        <source src="{{media.url}}" type="video/{{media.fileExtension}}">
+    </video>
+{% endblock %}
