--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -25,9 +25,9 @@
                         <sw-field
                             type="text"
                             v-model="slide.title" 
-                            :label="$tc('BlurElysiumSlides.baseForm.titleInput.title')"
-                            :placeholder="placeholder(slide, 'title', this.$tc('BlurElysiumSlides.baseForm.titleInput.placeholder') )"
-                            :helpText="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')"
+                            :label="$tc('blurElysiumSlides.slideSettings.headline.label')"
+                            :placeholder="placeholder(slide, 'title', this.$tc('blurElysiumSlides.slideSettings.headline.placeholder') )"
+                            :helpText="$tc('blurElysiumSlides.slideSettings.headline.helpText')"
                         />
 
                         {% block blur_elysium_slides_input_headline_element %}
