--- a/src/Resources/app/administration/src/assets/scss/global.scss
+++ b/src/Resources/app/administration/src/assets/scss/global.scss
@@ -6,6 +6,14 @@
 .bc-base__description-text {
     font-size: 14px;
 }
+.bc-code-inline {
+    display: inline-block;
+    background-color: #f6f6f6;
+    padding: 2px 6px;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    margin: 5px 0;
+}
 .bc__mt-1 {
     margin-top: 0.5rem;
 }
