--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
@@ -3,6 +3,7 @@
         :title="$tc('BlurElysiumSlides.mediaForm.cardTitle')"
         :is-loading="isLoading"
     >
+        
         <sw-container columns="1fr 1fr" gap="32px">
 
             {% block blur_elysium_slides_media_form_cover_upload %}
@@ -13,7 +14,7 @@
                         @media-upload-finish="payload => setMedia( payload.targetId, 'slideCover' )"
                     />
                     <sw-media-upload-v2
-                        :disabled="!acl.can('blur_slides_elysium.editor')"
+                        :disabled="!allowEdit"
                         :upload-tag="coverTag"
                         :source="media.slideCover.data"
                         class="blur-elysium-slides__media-upload"
@@ -31,14 +32,14 @@
             {% endblock %}
 
             {% block blur_elysium_slides_media_form_cover_portrait_upload %}
-                <div>
+                <div v-if="media.slideCover?.data?.mediaType.name !== 'VIDEO'">
                     <sw-upload-listener
                         :upload-tag="coverPortraitTag"
                         auto-upload
                         @media-upload-finish="payload => setMedia( payload.targetId, 'slideCoverPortrait' )"
                     />
                     <sw-media-upload-v2
-                        :disabled="!acl.can('blur_slides_elysium.editor')"
+                        :disabled="!allowEdit"
                         :upload-tag="coverPortraitTag"
                         :source="media.slideCoverPortrait.data"
                         class="blur-elysium-slides__media-upload"
@@ -47,6 +48,7 @@
                         :label="$tc('BlurElysiumSlides.mediaForm.coverPortrait.title')"
                         :help-text="$tc('BlurElysiumSlides.mediaForm.coverPortrait.helpText')"
                         :default-folder="entityName"
+                        file-accept="image/*"
                         @media-drop="payload => setMedia( payload.id, 'slideCoverPortrait' )"
                         @media-upload-remove-image="payload => resetMedia( 'slideCoverPortrait' )"
                         @media-upload-sidebar-open="mediaSidebar.openContent()"
