fix: missing slide-cover images in storefront

--- a/src/Resources/views/storefront/component/blur-elysium-slide/media.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/media.html.twig
@@ -1,16 +1,15 @@
 {% block cms_element_blur_elysium_slide_css_media_query %}
 
-    {% if media.thumbnails %}
+    {% if media.thumbnails.elements %}
         
         {# sort array by thumbnail width so that the media query order is correct #}
-        {% for thumbnail in media.thumbnails|sort((a, b) => a.width <=> b.width ) %}
+        {% for thumbnail in media.thumbnails.elements|sort((a, b) => a.width <=> b.width ) %}
             @media screen{% if orientation is defined %} and (orientation: {{ orientation }} ){% endif %} {% if loop.first is same as(false) %} and (min-width: {{ thumbnail.width ~ 'px' }}){% endif %} {
                 [data-elysium-slide-id="{{ slideId }}"] {
                     background-image: url( "{{ thumbnail.url }}" );
                 }
             }
         {% endfor %}
-
     {% else %}
 
         {# fallback if no thumbnails are available #}
@@ -20,4 +19,5 @@
             }
         }
     {% endif %}
+
 {% endblock %}
