--- a/src/Resources/views/storefront/component/blur-elysium-slide/slide.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/slide.html.twig
@@ -39,11 +39,13 @@
     {% block cms_element_blur_elysium_slide_css_styles %}
 
         {% block cms_element_blur_elysium_slide_css_styles_media %}
+            {{ dump(slide.media.fileExtension|lower) }}
+
             {% if slide.media or slide.mediaPortrait %}
                 {% apply spaceless %}
                     <style>
                         {% block cms_element_blur_elysium_slide_css_styles_media_include %}
-                            {% if slide.media and slide.media.fileExtension in bgImageExtensionWhitelist %}
+                            {% if slide.media and slide.media.fileExtension|lower in bgImageExtensionWhitelist %}
                                 {% sw_include '@Storefront/storefront/component/blur-elysium-slide/media.html.twig' with {
                                     media: slide.media,
                                     slideId: slide.id
@@ -52,7 +54,7 @@
                         {% endblock %}
 
                         {% block cms_element_blur_elysium_slide_css_styles_media_portrait_include %}
-                            {% if slide.mediaPortrait and slide.mediaPortrait.fileExtension in bgImageExtensionWhitelist %}
+                            {% if slide.mediaPortrait and slide.mediaPortrait.fileExtension|lower in bgImageExtensionWhitelist %}
                                 {% sw_include '@Storefront/storefront/component/blur-elysium-slide/media.html.twig' with {
                                     media: slide.mediaPortrait,
                                     slideId: slide.id,
@@ -110,7 +112,7 @@
 
             {# video element #}
             {% block cms_element_blur_elysium_slide_video %}
-                {% if ( slide.media and ( slide.media.fileExtension in videoExtensionWhitelist ) ) or ( slide.mediaPortrait and ( slide.mediaPortrait.fileExtension in videoExtensionWhitelist ) ) %}
+                {% if ( slide.media and ( slide.media.fileExtension|lower in videoExtensionWhitelist ) ) or ( slide.mediaPortrait and ( slide.mediaPortrait.fileExtension|lower in videoExtensionWhitelist ) ) %}
                     {% sw_include '@Storefront/storefront/component/blur-elysium-slide/video.html.twig' with {
                         media: slide.media,
                         mediaPortrait: slide.mediaPortrait
