fix #95: add word-break to container

--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -66,6 +66,7 @@
     .flex-wrap,
     .flex-column,
     .align-items-start;
+    word-break: break-word;
     flex: 0 1 auto;
     height: auto;
     z-index: var(--bc-esld-zindex-container);
