--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -11,12 +11,28 @@
 }
 
 .cms-element-elysium-slide {
+    --padding-y: 1.5rem;
+    --padding-y-min: 2rem;
+    --padding-y-max: 6rem;
+    --padding-y-scale: 6vw;
+    --padding-x: 1rem;
+    --padding-x-min: 1rem;
+    --padding-x-max: 8rem;
+    --padding-x-scale: 6vw;
+    --aspect-ratio-w: 4;
+    --aspect-ratio-h: 3;
+    --max-height: none;
     @extend .d-flex,
     .flex-wrap;
     position: relative;
     height: 100%;
     width: 100%;
-    padding: clamp( var( --bc-esld-padding-y-min), var(--bc-esld-padding-y-scale), var(--bc-esld-padding-y-max) ) clamp( var( --bc-esld-padding-x-min), var(--bc-esld-padding-x-scale), var(--bc-esld-padding-x-max) );
+    aspect-ratio: #{"var(--aspect-ratio-w) / var(--aspect-ratio-h)"};
+    max-height: var(--max-height);
+    padding: var(--padding-y) var(--padding-x);
+    /// @todo next-1.6.0
+    /// needed for dynamic sizing method
+    // padding: clamp( var( --bc-esld-padding-y-min), var(--bc-esld-padding-y-scale), var(--bc-esld-padding-y-max) ) clamp( var( --bc-esld-padding-x-min), var(--bc-esld-padding-x-scale), var(--bc-esld-padding-x-max) );
     background: {
         position: center center;
         size: cover;
@@ -25,6 +41,33 @@
     color: var(--bc-esld-text-color);
 	max-width: 100%;
     align-items: center;
+
+    @include media-breakpoint-up( sm ) {
+        --aspect-ratio-w: 5;
+        --aspect-ratio-h: 3;
+    }
+
+    @include media-breakpoint-up( md ) {
+        --padding-y: 2rem;
+        --padding-x: 3rem;
+    }
+
+    @include media-breakpoint-up( lg ) {
+        --aspect-ratio-w: 2;
+        --aspect-ratio-h: 1;
+    }
+
+    @include media-breakpoint-up( xl ) {
+        --padding-y: 4rem;
+        --padding-x: 6rem;
+        --aspect-ratio-w: 12;
+        --aspect-ratio-h: 5;
+    }
+
+    @include media-breakpoint-up( xxl ) {
+        --aspect-ratio-w: 16;
+        --aspect-ratio-h: 7;
+    }
 
     &:before {
 
