--- a/src/Resources/views/storefront/component/blur-elysium-slider/base-style.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slider/base-style.html.twig
@@ -1,11 +1,22 @@
 {% apply spaceless %}
     <style>
-        {% for aspectRatio in aspectRatios %}
-            @media screen and (min-width: {{ theme_config('breakpoint.' ~ aspectRatio.viewport) ~ 'px'}}) {
+        {% for size in sizes %}
+            @media screen and (min-width: {{ theme_config('breakpoint.' ~ size.viewport) ~ 'px'}}) {
                 #elysiumSlider-{{ elementId }} .cms-element-elysium-slide {
-                    aspect-ratio: {{aspectRatio.aspectRatio.width}} / {{aspectRatio.aspectRatio.height}};
-                    {% if aspectRatio.maxHeight is not empty %}
-                        max-height: {{ aspectRatio.maxHeight }};
+                    {% if size.aspectRatio.width is not empty %} 
+                        --aspect-ratio-w: {{size.aspectRatio.width}};
+                    {% endif %}
+                    {% if size.aspectRatio.height is not empty %} 
+                        --aspect-ratio-h: {{size.aspectRatio.height}};
+                    {% endif %}
+                    {% if size.slidePadding.y is not empty %}
+                        --padding-y: {{ size.slidePadding.y }};
+                    {% endif %}
+                    {% if size.slidePadding.x is not empty %}
+                        --padding-x: {{ size.slidePadding.x }};
+                    {% endif %}
+                    {% if size.maxHeight is not empty %}
+                        --max-height: {{ size.maxHeight }};
                     {% endif %}
                 }                        
             }
