fix #100: remove html tags in cms-slide-selection title

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -19,7 +19,7 @@
                         <div class="blur-es-list-item__slide-content">
                             <div>
                                 <div class="blur-es-list-item__slide-headline">
-                                    {{slideData.title}}
+                                    {{slideData.title.replace(/<\/?[^>]+>/ig, " ")}}
                                 </div>
                             </div>
                         </div>
